added a form and styling

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,10 @@ services:
 
 script:
 - bin/rails db:create
+- bin/rails db:migrate
 - bundle exec rspec
+- bin/rails test
+
 deploy:
   app: fake-stagram
   provider: heroku
